syntax = "proto3";
//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService1";

package calculation;

service Calculation {
  rpc Add (InputNumbers) returns (CalculationResult);
  rpc Subtract(InputNumbers) returns (CalculationResult);
  rpc Multiply(InputNumbers) returns (CalculationResult);
}

message InputNumbers {
  int32 Number1 = 1;
  int32 Number2 = 2;
}

message CalculationResult {
  int32 Result = 1;
}